# mti-anomaly-detection

./: .gitignore  DockerFile  README.md  main.py  main_gcp.py  pyproject.toml
mti_anomaly_detection/: datahandler.py  model.py  segdataset.py  trainer.py
